cmake_minimum_required(VERSION 3.13)
project(UDP_TEST)

set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
find_package(Boost REQUIRED)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
        endif()
add_executable(UDP_TEST main.cpp)
target_link_libraries(UDP_TEST ${Boost_LIBRARIES})
